src/app/ip-info/ip-info.component.css
:host{
  position: absolute;
  bottom: 0;
  transform: translateY(50%);
  z-index: 100;
}
.ip-info{
  display: grid;
  grid-template-columns: repeat(4, 350px);
  padding: 37px 0px;
  border-radius: 15px;
  box-shadow: 0px 4px 8px 2px #00000010;
  background-color: white;
}

.info-wrapper{
  padding: 0px 32px;
}

.info-wrapper:not(:last-child){
  border-right: solid 1px #97979730;
}

.subtitle{
  opacity: 50%;
  color: #2c2c2c;
  font-size: 12px;
  letter-spacing: 1.75px;
  font-weight: bolder;
}

.info{
  font-size: 26px;
  font-weight: medium;
  letter-spacing: -0.23px;
  line-height: 30px;
  color: #2c2c2c;
  margin: 0px;
  margin-top: 8px;
  overflow-wrap: break-word;
}

@media (max-width: 1400px) {
  .ip-info{
    display: grid;
    grid-template-columns: repeat(4, 250px);
    padding: 37px 0px;
    border-radius: 15px;
    box-shadow: 0px 4px 8px 2px #00000010;
    background-color: white;
  }
}

@media (max-width: 950px) {
  :host{
    width: 90%;
    transform: translateY(10%);
  }
  .ip-info{
    display: flex;
    flex-direction: column;
    padding: 0px;
  }
  .info-wrapper:not(:last-child){
    border: none;
  }

  .info-wrapper{
    text-align: center;
    padding: 12px;
  }

  .subtitle{
    font-size: 10px;
  }

  .info{
    margin-top: 7px;
    font-size: 20px;
  }
}

